# mmgroup

./: .gitignore  MANIFEST.in  README.rst  _____generate_pxd.py  build_ext_steps.py  build_shared.py  cleanup.py  codegen_clifford12.py  codegen_mat24.py  codegen_mm.py  codegen_mm_op.py  codegen_mm_reduce.py  config.py  copy_shared.py  find_strings.py  generate_code.py  generate_pxd.py  import_all.bat  import_all.py  linuxpatch.py  make_all.bat  make_all_doc.bat  make_cibuildwheel.bat  make_doc.bat  make_endianess_header.py  make_legacy_extensions.py  make_mat24.bat  meson.build  msvc1.bat  parallel_processes.py  pyproject.toml  pytest.ini  q  readthedocs.yaml  readthedocs.yml  requirements.txt  setup.py  setup_mat24.py  shared_headers.py  test_all.bat  (+3 more)
.github/workflows/: macos.yml  python-package.yml
applications/Hurwitz/: check.py  find_generators.py  hurwitz_monster_samples.py  hurwitz_verify.py  parse_found.py  performance.py  readme.py
applications/StandardGenerators/: standard_generators.py  stdgen.py
applications/Y555/: bimm.py  inc_p3.py  legswap.py  p3_to_mm.py  readme.py  selftest.py  spider.py
docs/: make.bat  requirements.txt
docs/doxygen/: Doxyfile  doxygen_typedefs.h
docs/source/: G_x0.inc  api.rst  applications.rst  bugs.inc  c_interface.rst  conf.py  definitions.rst  demo_reduction.rst  description_MM.inc  golay_basis.inc  golay_basis_data.inc  guide.rst  guide_build_process.inc  guide_code_generation.inc  guide_directory.inc  guide_math_implement.inc  guide_math_leech2.inc  guide_math_subgroup_m24.inc  guide_mathematical.inc  guide_mathematical_2.inc  guide_use_code_generation.inc  index.rst  installation.inc  installation_from_source.inc  make_tables.py  qstate12.inc  random_MM.inc  references.bib  sample_rep.py  stability_MM.inc
docs/source/_static/: custom.css
src/mmgroup/: __init__.py  axes.py  bitfunctions.py  conftest.py  mat24.cp37-win_amd64.pyd  mat24_xi.cp37-win_amd64.pyd  mm.cp37-win_amd64.pyd  mm127.cp37-win_amd64.pyd  mm15.cp37-win_amd64.pyd  mm3.cp37-win_amd64.pyd  mm7.cp37-win_amd64.pyd  mm_crt_space.py  mm_group.py  mm_order.py  mm_order_vector.py  mm_space.py  ploop.py
src/mmgroup/bimm/: __init__.py  bimm.py  inc_p3.py  p3_to_mm.py  readme.py  readme_example.py  readme_math.py
src/mmgroup/demo/: __init__.py  data_types.py  reduce_axis.py  reduce_feasible.py  reduce_monster.py  reduce_sub.py
src/mmgroup/dev/: config.py
src/mmgroup/dev/c_doc/: mat24_functions_c_doc.txt  mat24_xi_functions_c_doc.txt  mm_aux_c_doc.txt  mm_random_c_doc.txt  mm_tables_c_doc.txt
src/mmgroup/dev/c_files/: libmat24.lib  libmm_basics.lib  mat24.def  mat24_functions.c  mat24_functions.h  mat24_xi_functions.c  mat24_xi_functions.h  mm127_op_misc.c  mm127_op_pi.c  mm127_op_t.c  mm127_op_word.c  mm127_op_xi.c  mm127_op_xy.c  mm15_op_misc.c  mm15_op_pi.c  mm15_op_t.c  mm15_op_word.c  mm15_op_xi.c  mm15_op_xy.c  mm3_op_misc.c  mm3_op_pi.c  (+22 more)
src/mmgroup/general/: __init__.py  orbit_lin2.py
src/mmgroup/generate_c/: __init__.py  build_ext_steps.py  build_shared.py  copy_shared.py  generate_code.py  generate_functions.py  generate_pxd.py  linuxpatch.py  make_c_tables.py  make_c_tables_doc.py  make_pxd.py  make_pxi.py  make_pyx.py  parallel_processes.py  shared_headers.py
src/mmgroup/structures/: abstract_group.py  abstract_mm_group.py  abstract_mm_rep_space.py  abstract_rep_space.py  auto_group.py  autpl.py  cocode.py  construct_mm.py  find_order_vector.py  gcode.py  involutions.py  mm0_group.py  mm_order.py  mm_order_vector.py  mm_space_indices.py  orbit_lin2.py  order_vector_data.py  parity.py  parse_atoms.py  ploop.py  qs_matrix.py  random_mm.py  suboctad.py  xleech2.py  xs1_co1.py  xsp2_co1.py
src/mmgroup/tests/: chisquare.py  compile.py  tempdir.py
(+357 files in other folders)
