[build-system]
requires = [
   "setuptools", 
   "wheel", 
   "Cython", 
   "numpy", 
   "regex", 
   "pytest",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
skip = "*-win32 *-manylinux_i686 cp36-* cp311-* pp* *-musllinux*"
build-verbosity = 3
test-requires = [
   "pytest",
   "numpy", 
   "regex", 
]


# Run the package tests using `pytest`
test-command = "pytest --pyargs mmgroup -v -s -m \"not slow\""
