[build-system]
requires = [
   "setuptools",
   "build",
   "wheel", 
   "Cython", 
   "numpy", 
   "regex", 
   "pytest",
   "auditwheel; sys_platform == 'linux' or sys_platform == 'darwin' ", 
  # "patchelf; sys_platform == 'linux' or sys_platform == 'darwin' ", 
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
skip = "*-win32 *-manylinux_i686 cp37-* cp36-*  pp* *-musllinux*"
build-verbosity = 3
test-requires = [
   "pytest",
   "numpy", 
   "regex", 
]


# Run the package tests using `pytest`
test-command = "pytest --pyargs mmgroup -v -s -m \"not slow\""
